--- a/style.css
+++ b/style.css
@@ -136,13 +136,22 @@ a {
 }
 
 .thirdcontent {  
-    width: 500px;
+    width: 750px;
     display: flex;
     flex-direction: column;
 }
 
+.quote {
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1F2937;
+}
+
 .citation {
     text-align: right;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 
