--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ a {
     color: #F9FAF8;
     font-weight: bold;
     border-radius: 5px;
+    border-color: transparent;
 }
 
 .image {
@@ -159,13 +160,32 @@ a {
 
 .fourth {
     background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 
 .signupbox {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: #3882F6;
+    width: 700px;
+    height: 100px;
+    margin: 64px;
+    border-radius: 8px;
+    padding: 0 64px;
+}
+
+.fourthtitle {
+    font-size: 24px;
+    color: white;
+    font-weight: bold;
+}
+
+.signupbox .button {
+    border-color: #F9FAF8;
 }
 
 .footer {
