--- a/style.css
+++ b/style.css
@@ -193,7 +193,10 @@ a {
 }
 
 .footer p {
-    text-align: center;
-    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: white;
+    padding: 0;
+    margin: 16px;
 }
